[package]
name = "orb"
version = "0.1.0"
edition = "2021"
description = "OneDrive as a block device"
license = "GPL-3.0-or-later"

[features]
default = []
completion = ["dep:clap", "dep:clap_complete"]

[dependencies]
anyhow = "1"
bytes = "1"
bytesize = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11"
futures-util = { version = "0.3", features = ["io"] }
humantime = "2"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = [] }
itertools = "0.12.1"
log = "0.4.21"
lru = "0.12.3"
onedrive-api = "0.10.0"
open = "5.1.2"
orb-ublk = { path = "./orb-ublk" }
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["stream"] }
rustix = { version = "0.38", features = ["fs", "time"] }
scoped-tls = "1"
sd-notify = "0.4.1"
serde = { version = "1", features = ["derive"] }
serde-inline-default = "0.2"
serde_json = "1.0.114"
tokio = { version = "1", features = ["macros", "net", "signal", "sync", "time"] }
toml = "0.8"

[dev-dependencies]
rustix = { version = "0.38", features = ["fs"] }

[build-dependencies]
clap = { version = "4", optional = true, features = ["derive"] }
clap_complete = { version = "4", optional = true }

[workspace]
resolver = "2"
members = ["orb-ublk"]

[profile.bench]
debug = "full"
