[package]
name = "orb"
version = "0.1.0"
edition = "2021"
description = "OneDrive as a block device"
license = "GPL-3.0-or-later"
# NB. Sync with CI and README.
rust-version = "1.76" # orb-ublk

[features]
default = []
completion = ["dep:clap", "dep:clap_complete"]

[dependencies]
anyhow = "1"
bytes = "1"
bytesize = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures-util = { version = "0.3", features = ["io"] }
hostname = "0.4"
humantime = "2"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = "0.1"
itertools = "0.14"
lru = "0.14"
onedrive-api = "0.10"
open = "5.1"
orb-ublk = { path = "./orb-ublk", features = ["tokio"] }
parking_lot = "0.12"
rand = "0.9"
reqwest = { version = "0.12", features = ["stream"] }
rustix = { version = "1", features = ["fs", "time", "stdio"] }
scoped-tls = "1"
scopeguard = "1"
sd-notify = "0.4"
serde = { version = "1", features = ["derive"] }
serde-inline-default = "0.2"
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt", "signal", "sync", "time"] }
toml = "0.8"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = { version = "0.2", features = ["futures-03"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }

[dev-dependencies]
rustix = { version = "1", features = ["fs"] }

[build-dependencies]
clap = { version = "4", optional = true, features = ["derive"] }
clap_complete = { version = "4", optional = true }

[workspace]
resolver = "2"
members = ["orb-ublk", "ublk-chown-unprivileged"]

[profile.bench]
debug = "full"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Of course everything involving networks may fail.
missing-errors-doc = "allow"
# False positive: `rest` vs. `ret`, `off` vs. `coff`, etc.
similar-names = "allow"
# False positive on `unwrap` and `expect` for fail-means-bug semantics.
missing-panics-doc = "allow"
# Long sequential tasks (`login::interactive`, `onedrive_backend::init`) where
# splitting fns can only increase the complexity.
too-many-lines = "allow"
# Workaround: https://github.com/rust-lang/rust-clippy/issues/13184
explicit-iter-loop = "allow"

# TODO: Caused by zid and coff are used as u32 and usize interchangably.
cast-lossless = "allow"
cast-possible-truncation = "allow"
