[package]
name = "orb-ublk"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"
rust-version = "1.76" # result_option_inspect

[features]
default = []
generate-sys = ["dep:bindgen"]

[dependencies]
bitflags = "2.4.2"
derive_more = "0.99"
io-uring = { version = "0.6.2", features = ["io_safety"] }
log = "0.4.20"
rustix = { version = "0.38.30", features = ["event", "mm", "process"] }
scopeguard = "1.2.0"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.35.1", features = ["net", "rt"] }

[build-dependencies]
bindgen = { version = "0.69.2", optional = true }

[dev-dependencies]
anyhow = "1"
bytesize = "1.3.0"
clap = { version = "4.4.18", features = ["derive"] }
ctrlc = "3.4.2"
env_logger = "0.11"
rand = "0.8.5"
rstest = "0.18.2"
rustix = { version = "0.38.30", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.35.1", features = ["time"] }
xshell = "0.2.5"

[lints.rust]
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Of course system calls can fail.
missing-errors-doc = "allow"
# Interop with generated constants
cast-possible-truncation = "allow"
cast-sign-loss = "allow"
# Convenient for C structs.
default-trait-access = "allow"
# For semantics.
items-after-statements = "allow"
# It makes things more unreadable.
transmute-ptr-to-ptr = "allow"

# TODO
missing-panics-doc = "allow"
cast-lossless = "allow"
wildcard-imports = "allow"

# WAIT: https://github.com/rust-lang/rust-clippy/issues/12279
no-effect-underscore-binding = "allow"
